--- a/spring_web_application/src/main/resources/messages/user_en.properties
+++ b/spring_web_application/src/main/resources/messages/user_en.properties
@@ -25,6 +25,7 @@ exception.passwordmismatch ={0} no match password!!!
 #INPUT MESSAGE
 input.userId =  input userid !!!!  
 
-
+#BRADCRUM
+nv.bc=HOME < {0} < {1}
 
 
