--- a/spring_web_application/src/main/resources/messages/user_ko.properties
+++ b/spring_web_application/src/main/resources/messages/user_ko.properties
@@ -34,6 +34,7 @@ exception.passwordmismatch = {0} \ud328\uc4f0\uc6cc\ub4dc\uac00 \ud2c0\ub9bd\ub2
 #INPUT MESSAGE
 input.userId =  \uc0ac\uc6a9\uc790\uc544\uc774\ub514\ub97c \uc785\ub825\ud558\uc138\uc694!!!! 
 
-
+#브레드컴
+nv.bc=홈 < {0} < {1}
 
 
